--- a/Hotelbot/.env
+++ b/Hotelbot/.env
@@ -2,5 +2,5 @@
 TELEGRAM_API_TOKEN=7299809940:AAGxWeFP1BFAZOK0A713MI9zyl4emGcF43s
 RAPID_API_TOKEN2=37743181b7mshf2b9c3606c719adp155920jsn509d1764f0eb
 API_HOST=hotels4.p.rapidapi.com
-RAPID_API_TOKEN=37743181b7mshf2b9c3606c719adp155920jsn509d1764f0eb
-RAPID_API_TOKEN3=37743181b7mshf2b9c3606c719adp155920jsn509d1764f0eb
+RAPID_API_TOKEN=
+RAPID_API_TOKEN3=
